[gd_scene load_steps=24 format=3 uid="uid://c46vvjqepxr5c"]

[ext_resource type="Script" path="res://Entities/Actors/NPCs/Garreth/garreth_alt.gd" id="1_0w5gq"]
[ext_resource type="Texture2D" uid="uid://8uhj6bpw43fi" path="res://Entities/Actors/NPCs/Garreth/Art/garreth.png" id="2_ykyr2"]
[ext_resource type="AnimationLibrary" uid="uid://78ghpvleme55" path="res://Entities/Actors/NPCs/npc_anims.res" id="3_ddblb"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="4_s0dao"]
[ext_resource type="PackedScene" uid="uid://cshkpaxgeioxd" path="res://Utilities/Game Components/NPCAltDetector.tscn" id="4_t4ib7"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector.gd" id="5_x35se"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence.gd" id="6_6gfsl"]
[ext_resource type="Script" path="res://addons/beehave/nodes/leaves/action.gd" id="7_xtqt0"]
[ext_resource type="Script" path="res://addons/beehave/nodes/leaves/condition.gd" id="8_w72v5"]
[ext_resource type="Script" path="res://addons/beehave/nodes/decorators/delayer.gd" id="9_gnkor"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tfsnf"]
radius = 3.0
height = 10.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bfue1"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8poqu"]
animation = &"npc_anims/idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0c0yc"]
animation = &"npc_anims/idle_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_u5glx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8poqu")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_0c0yc")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ne5tr"]
animation = &"npc_anims/move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3hi50"]
animation = &"npc_anims/move_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_egro6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ne5tr")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_3hi50")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y4d7w"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1snfb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ap3hn"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_epujy"]
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_u5glx")
states/Idle/position = Vector2(335, 100)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_egro6")
states/Move/position = Vector2(335, 0)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_y4d7w"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_1snfb"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_ap3hn")]
graph_offset = Vector2(0, -75.9467)

[sub_resource type="CircleShape2D" id="CircleShape2D_ajai6"]
radius = 23.0868

[node name="GarrethAlt" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_0w5gq")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("2_ykyr2")
hframes = 8
vframes = 6
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tfsnf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bfue1"),
"npc_anims": ExtResource("3_ddblb")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_epujy")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = 0
parameters/Move/blend_position = 0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true

[node name="StealMarker" type="Node2D" parent="."]
rotation = 3.14159

[node name="Marker2D" type="Marker2D" parent="StealMarker"]
position = Vector2(-10, -2.53518e-05)

[node name="NpcAltDetector" parent="." instance=ExtResource("4_t4ib7")]
NPCName = "Garreth"

[node name="CollisionShape2D" type="CollisionShape2D" parent="NpcAltDetector"]
shape = SubResource("CircleShape2D_ajai6")

[node name="GarrethBehaviour" type="Node" parent="." node_paths=PackedStringArray("blackboard", "actor")]
script = ExtResource("4_s0dao")
blackboard = NodePath("@Node@17350")
actor = NodePath("..")

[node name="SelectorComposite" type="Node" parent="GarrethBehaviour"]
script = ExtResource("5_x35se")

[node name="SequenceComposite" type="Node" parent="GarrethBehaviour/SelectorComposite"]
script = ExtResource("6_6gfsl")

[node name="ConditionLeaf" type="Node" parent="GarrethBehaviour/SelectorComposite/SequenceComposite"]
script = ExtResource("8_w72v5")

[node name="DelayDecorator" type="Node" parent="GarrethBehaviour/SelectorComposite/SequenceComposite"]
script = ExtResource("9_gnkor")
wait_time = 5.0

[node name="Patrol" type="Node" parent="GarrethBehaviour/SelectorComposite/SequenceComposite/DelayDecorator"]
script = ExtResource("7_xtqt0")

[connection signal="navigation_finished" from="NavigationAgent2D" to="GarrethBehaviour/SelectorComposite/SequenceComposite/ConditionLeaf" method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="on_patrol" from="GarrethBehaviour/SelectorComposite/SequenceComposite/DelayDecorator/Patrol" to="." method="_on_patrol"]
